--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,9 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_PASSWORD: new_password
-          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: admin
+          POSTGRES_DB: FinalAttemptDB
         ports:
           - 5432:5432
         options: >-
@@ -35,16 +36,26 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask
+        pip install -r requirements.txt
+        pip install flask-wtf
         pip install flask-sqlalchemy
         pip install flask-login
-        pip install flask-wtf
         pip install psycopg2-binary
         pip install pytest
         pip install email_validator
+        pip install Werkzeug
+        pip install flask-migrate
+        pip install python-dotenv
+
+    - name: List installed packages
+      run: |
+        pip list
 
     - name: Run tests
       env:
-        DATABASE_URL: postgresql://postgres:new_password@localhost:5432/postgres
+        DATABASE_URL: postgresql://postgres:admin@localhost:5432/FinalAttemptDB
+        FLASK_ENV: testing
+        SECRET_KEY: your-test-secret-key
       run: |
-        pytest tests/test_app.py -v 
+        python -c "import flask_wtf; print('flask_wtf is installed')"
+        pytest tests/test_app.py -v
