--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,20 +36,22 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flask-wtf
-        pip install flask-sqlalchemy
-        pip install flask-login
-        pip install psycopg2-binary
-        pip install pytest
-        pip install email_validator
-        pip install Werkzeug
-        pip install flask-migrate
-        pip install python-dotenv
+        # Install specific versions to avoid compatibility issues
+        pip install Flask==2.0.1
+        pip install Flask-SQLAlchemy==2.5.1
+        pip install Flask-Login==0.5.0
+        pip install Flask-WTF==0.15.1
+        pip install WTForms==2.3.3
+        pip install psycopg2-binary==2.9.1
+        pip install pytest==6.2.5
+        pip install email_validator==1.1.3
+        pip install Werkzeug==2.0.1
+        pip install Flask-Migrate==3.1.0
+        pip install python-dotenv==0.19.0
 
-    - name: List installed packages
+    - name: Verify flask-wtf installation
       run: |
-        pip list
+        python -c "import flask_wtf; print('flask_wtf is installed')"
 
     - name: Run tests
       env:
@@ -57,5 +59,4 @@ jobs:
         FLASK_ENV: testing
         SECRET_KEY: your-test-secret-key
       run: |
-        python -c "import flask_wtf; print('flask_wtf is installed')"
         pytest tests/test_app.py -v
