--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Flask-Login==0.5.0
-Flask-WTF==0.15.1
+flask==2.0.1
+flask_sqlalchemy==2.5.1
+flask_login==0.5.0
+flask_wtf==0.15.1
 WTForms==2.3.3
 psycopg2-binary==2.9.1
 pytest==6.2.5
 email_validator==1.1.3
 Werkzeug==2.0.1
-Flask-Migrate==3.1.0
+Flaskflask_wtf3.1.0
 python-dotenv==0.19.0 
