--- a/.github/workflows/FlaskSW.yml
+++ b/.github/workflows/FlaskSW.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask flask-login flask-sqlalchemy psycopg2-binary pytest
+          pip install flask flask-login flask-sqlalchemy flask-wtf psycopg2-binary pytest email_validator
 
       - name: Run all tests
         env:
