--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,17 +37,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         # Install specific versions to avoid compatibility issues
-        pip install Flask==2.0.1
-        pip install Flask-SQLAlchemy==2.5.1
-        pip install Flask-Login==0.5.0
-        pip install Flask-WTF==0.15.1
-        pip install WTForms==2.3.3
+        pip install flask==2.0.1
+        pip install flask_sqlalchemy==2.5.1
+        pip install flask_login==0.5.0
+        pip install flask_wtf==0.15.1
+        pip install wtforms==2.3.3
         pip install psycopg2-binary==2.9.1
         pip install pytest==6.2.5
         pip install email_validator==1.1.3
         pip install Werkzeug==2.0.1
-        pip install Flask-Migrate==3.1.0
-        pip install python-dotenv==0.19.0
+        pip install Flaskflask_wtf3.1.0
+        pip install python-dotenv==0.19.0 
 
     - name: Verify flask-wtf installation
       run: |
