--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ flask==2.0.1
 flask_sqlalchemy==2.5.1
 flask_login==0.5.0
 flask_wtf==0.15.1
-WTForms==2.3.3
+wtforms==2.3.3
 psycopg2-binary==2.9.1
 pytest==6.2.5
 email_validator==1.1.3
