--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,16 +1,15 @@
-<<<<<<< HEAD
-name: Django CI/CD
+name: Flask CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:14
@@ -18,37 +17,6 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: test_db
-=======
-name: Django Tests
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  run_tests:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-24.04]
-        python-version:
-          - "3.11"
-
-    name: Test
-    runs-on: ${{ matrix.os }}
-
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: admin
-          POSTGRES_DB: FinalAttemptDB
->>>>>>> 10fd75053014ea14bb1f18a65da29d5a6121fd7f
         ports:
           - 5432:5432
         options: >-
@@ -58,91 +26,56 @@ jobs:
           --health-retries 5
 
     steps:
-<<<<<<< HEAD
-      - uses: actions/checkout@v4
-      
-=======
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libmagic1
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r config/requirements.txt
-
-      - name: Run migrations
-        run: |
-          python manage.py migrate
-
-      - name: Run tests
-        run: |
-          python manage.py test
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: docs/Test_Documentation.docx
-          retention-days: 5
-
-  deploy:
-    needs: run_tests
-    runs-on: ubuntu-24.04
-    if: ${{ success() }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
->>>>>>> 10fd75053014ea14bb1f18a65da29d5a6121fd7f
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-<<<<<<< HEAD
-          
-      - name: Install Dependencies
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
-      - name: Run Tests
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
-          SECRET_KEY: test_key
+
+      - name: Set up environment variables
         run: |
-          python manage.py migrate
-          python manage.py test
+          echo "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db" >> $GITHUB_ENV
+          echo "FLASK_ENV=test" >> $GITHUB_ENV
+          echo "SECRET_KEY=test_key" >> $GITHUB_ENV
+
+      - name: Run migrations
+        env:
+          DATABASE_URL: ${{ env.DATABASE_URL }}
+        run: |
+          flask db upgrade
+
+      - name: Run tests
+        env:
+          DATABASE_URL: ${{ env.DATABASE_URL }}
+        run: |
+          pytest tests/
 
   deploy:
     needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
+
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Deploy to Production
-        run: |
-          echo "Add your deployment commands here"
-=======
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
       - name: Install dependencies for deploy
         run: |
           python -m pip install --upgrade pip
-          pip install -r config/requirements.txt
+          pip install -r requirements.txt
 
       - name: Deploy to Production
         run: |
-          echo "Deploying project..."
->>>>>>> 10fd75053014ea14bb1f18a65da29d5a6121fd7f
+          echo "Add your deployment commands here, e.g., docker-compose up -d"
