--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 flask==2.0.1
 flask-sqlalchemy==2.5.1
+flask_wtf == 1.0.1
 sqlalchemy==1.4.23
 flask-login==0.5.0
 pytest==7.0.1
-werkzeug==2.0.2 
+werkzeug==2.1.0
+psycopg2-binary==2.9.1
+email-validator==1.1.3
+python-dotenv==0.19.0
