--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-
-flask==2.0.1
-flask-sqlalchemy==2.5.1
-flask-wtf==1.0.2
-sqlalchemy==1.4.23
-flask-login==0.5.0
-pytest==7.0.1
-werkzeug==2.0.3
-psycopg2-binary==2.9.1
-email-validator==1.1.3
-python-dotenv==0.19.0
+Flask==2.3.3
+Werkzeug==2.3.7
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.1.1
+Flask-Login==0.6.2
+SQLAlchemy==2.0.21
+pytest==7.4.2
+psycopg2-binary==2.9.7
+email-validator==2.0.0
+WTForms==3.0.1
+python-dotenv==1.0.0
