--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Flask-WTF==1.1.1
 Flask-Login==0.6.2
 SQLAlchemy==2.0.21
 pytest==7.4.2
+pytest-flask==1.2.0
+pytest-cov==4.1.0
 psycopg2-binary==2.9.7
 email-validator==2.0.0
 WTForms==3.0.1
