--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,41 @@
-# Byte-compiled Python files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Environment variables file
-.env
-
-# Virtual environment directory
-venv/
-.venv/
-
-# Flask instance folder (if used)
-instance/
-
-# SQLite database files
-*.db
-*.sqlite3
-
-# Pytest cache and test artifacts
-.pytest_cache/
-*.pytest_cache
-
-# Logs
-*.log
-logs/
-*.log.*
-
-# IDEs and Editors
-.vscode/
-.idea/
-*.sublime-workspace
-
-# OS-specific files
-.DS_Store
-Thumbs.db
-
-# Python-specific
-*.egg
-*.egg-info/
-dist/
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Static files (if dynamically generated)
-staticfiles/
+# Virtual Environment
+venv/
+ENV/
 
-# Migrations (if using Flask-Migrate)
-migrations/
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-
-# Node modules (if using npm for frontend assets)
-node_modules/
-
-# Other temporary files
-*.bak
+# IDE
+.idea/
+.vscode/
 *.swp
-*.tmp
+*.swo
+
+# Testing
+.coverage
+coverage.xml
+htmlcov/
+.pytest_cache/
+
+# Environment variables
+.env
+.env.local
