--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pytest pytest-cov flake8
+        pip install pytest flake8
         
     - name: Lint with flake8
       run: |
@@ -41,15 +41,7 @@ jobs:
         
     - name: Run tests with pytest
       run: |
-        pytest tests/test_basic.py -v --cov=./ --cov-report=xml
-        
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: true
+        pytest tests/test_basic.py -v
 
   deploy:
     needs: test
@@ -75,6 +67,3 @@ jobs:
     - name: Deploy
       run: |
         echo "Add your deployment steps here"
-        # Example: Deploy to Heroku
-        # heroku container:push web
-        # heroku container:release web 
